Add Spanish localization plus fix some typos
Thanks Valenx!

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -1,73 +1,68 @@
 Key,Type,Desc,English,Italian,German,French,Spanish,Japanese,Korean,Polish,Russian,Chinese (Simplified),Portuguese (Brazil),Chinese (Traditional)
-WayfarersWings/UI/Achievements,Text,Main window title,Achievements,Trofei,,,,,,,,,,
-WayfarersWings/UI/MissionAchievements,Text,Window title for wings gained in current mission (Flight report),Mission Achievements,Trofei della Missione,,,,,,,,,,
-WayfarersWings/UI/Ribbons,Text,,Wings,Decorazioni,,,,,,,,,,
-WayfarersWings/UI/Kerbals,Text,,Kerbals,Kerbal,,,,,,,,,,
-WayfarersWings/UI/TotalMissionTime,Text,,Total mission time,Tempo totale in missione,,,,,,,,,,
-WayfarersWings/UI/TotalEvaTime,Text,,Total EVA time,Tempo totale in EVA,,,,,,,,,,
-WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,Missioni completate,,,,,,,,,,
-WayfarersWings/UI/Status,Text,,Status,Stato,,,,,,,,,,
-WayfarersWings/UI/OnMission,Text,,On Mission,In Missione,,,,,,,,,,
-WayfarersWings/UI/Available,Text,,Available,Disponibile,,,,,,,,,,
-WayfarersWings/UI/Dead,Text,,Dead,Morto,,,,,,,,,,
-WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,Conferisci Decorazione,,,,,,,,,,
-WayfarersWings/UI/AwardToKerbal,Text,,Award,Conferisci,,,,,,,,,,
-WayfarersWings/UI/Search,Text,,Search wing,Cerca decorazione,,,,,,,,,,
-WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,Conferma la revoca della decorazione,,,,,,,,,,
-WayfarersWings/UI/SortByName,Text,,Sort by name,Ordina per nome,,,,,,,,,,
-WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,Ordina per prestigio,,,,,,,,,,
-WayfarersWings/UI/KerbalMissionsCount,Text,,{0} missions,{0} missioni,,,,,,,,,,
-WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,,,,,,,,
-WayfarersWings/Ribbons/FirstTimeName,Text,name is the base ribbon name,{name} 1°,{name} 1°,,,,,,,,,,
-WayfarersWings/Ribbons/FirstTime,Text,description is the base ribbon description,{description} for the first time,{description} per la prima volta,,,,,,,,,,
-WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,Sfera di Influenza di {body},,,,,,,,,,
-WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},Entrato nella Sfera di Influenza di {body},,,,,,,,,,
-WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,Orbita Stabile di {body},,,,,,,,,,
-WayfarersWings/Ribbons/Orbit,Text,,Entered in a stable orbit around {body},Entrato in un'orbita stabile attorno a {body},,,,,,,,,,
-WayfarersWings/Ribbons/EVAOrbitName,Text,,{body} EVA in Orbit,EVA in Orbita attorno a {body},,,,,,,,,,
-WayfarersWings/Ribbons/EVAOrbit,Text,,Executed EVA in orbit around {body},Eseguito EVA in orbita attorno a {body},,,,,,,,,,
-WayfarersWings/Ribbons/EVASpaceName,Text,,{body} EVA in Space,EVA nello Spazio attorno a {body},,,,,,,,,,
-WayfarersWings/Ribbons/EVASpace,Text,,Executed EVA in space around {body},Eseguito EVA nello spazio attorno a {body},,,,,,,,,,
-WayfarersWings/Ribbons/LandedName,Text,,{body} Landing,Atterraggio su {body},,,,,,,,,,
-WayfarersWings/Ribbons/Landed,Text,,Landed on {body},Atterrato su {body},,,,,,,,,,
-WayfarersWings/Ribbons/EVAGroundName,Text,,{body} EVA on Ground,EVA a Terra su {body},,,,,,,,,,
-WayfarersWings/Ribbons/EVAGround,Text,,Executed EVA on ground after landing on {body},Eseguito EVA a terra dopo l'atterraggio su {body},,,,,,,,,,
-WayfarersWings/Ribbons/GeeForceName,Text,,High Gee Force {rank},Alta Forza Gee {rank},,,,,,,,,,
-WayfarersWings/Ribbons/GeeForce,Text,,Withstanded an acceleration of {geeForce}G,Resistito ad un'accelerazione di {geeForce}G,,,,,,,,,,
-WayfarersWings/Ribbons/FlagPlantedName,Text,,{body} Flag,Bandiera di {body},,,,,,,,,,
-WayfarersWings/Ribbons/FlagPlanted,Text,,Planted a flag on {body} ground during EVA,Piantato una bandiera sul suolo di {body} durante l'EVA,,,,,,,,,,
-WayfarersWings/Ribbons/SingleMissionTimeName,Text,,Endurance {rank},Resistenza {rank},,,,,,,,,,
-WayfarersWings/Ribbons/SingleMissionTime,Text,,Returned safely after {time} {unit} in a single mission,Ritornato sano e salvo dopo {time} {unit} in una singola missione,,,,,,,,,,
-WayfarersWings/Ribbons/MissionsCompletedName,Text,,Multiple Missions {rank},Missioni Multiple {rank},,,,,,,,,,
-WayfarersWings/Ribbons/MissionsCompleted,Text,,Completed {missions} missions or more,Completate {missions} missioni o più,,,,,,,,,,
-WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},Tempo di Missione {rank},,,,,,,,,,
-WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,Trascorso {time} {unit} o più durante tutte le missioni,,,,,,,,,,
-WayfarersWings/Ribbons/AtmosphereName,Text,,{body} Atmosphere,Atmosfera di {body},,,,,,,,,,
-WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},Entrato nell'atmosfera di {body},,,,,,,,,,
-WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,Splashdown,,,,,,,,,,
-WayfarersWings/Ribbons/Splashdown,Text,,Withstanded the splashdown of a vessel in ocean,Resistito allo splashdown di un veicolo nell'oceano,,,,,,,,,,
-WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},Orbita Veloce {rank},,,,,,,,,,
-WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {seconds} seconds,Raggiunta orbita stabile del pianeta natale in meno di {seconds} secondi,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,Primo Kerbal nello Spazio,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,Premiato per essere stato il primo kerbal a raggiungere lo Spazio,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,Prima EVA nello Spazio,,,,,,,,,,
-WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space of the Kerbalkind,Prima EVA condotta nello Spazio della Kerbalkind,,,,,,,,,,
-WayfarersWings/Ribbons/SolidFuelBoosterName,Text,,Solid Fuel Booster {rank},Propulsore a Combustibile Solido {rank},,,,,,,,,,
-WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with atleast {percentage}% of mass in solid boosters,Lanciato dal pianeta natale con almeno {percentage}% di massa in propulsori a combustibile solido,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleName,Text,,Heavy Vehicle {rank},Veicolo Pesante {rank},,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicle,Text,,Served as a crew member of a vehicle with a total mass exceeding {mass} tons,Servito come membro dell'equipaggio di un veicolo con una massa totale superiore a {mass} tonnellate,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLaunchName,Text,,Heavy Vehicle Launch {rank},Lancio di Veicolo Pesante {rank},,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLaunch,Text,,Launched on a vehicle with a total mass exceeding {mass} tons,Lanciato su un veicolo con una massa totale superiore a {mass} tonnellate,,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLandingName,Text,,Heavy Vehicle Landing {rank},Atterraggio di Veicolo Pesante {rank},,,,,,,,,,
-WayfarersWings/Ribbons/HeavyVehicleLanding,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,Atterrato su un veicolo con una massa totale superiore a {mass} tonnellate,,,,,,,,,,
-WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},Atterraggio in Montagna {rank},,,,,,,,,,
-WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,Atterrato su una montagna più alta di {altitude} metri,,,,,,,,,,
-WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},Resistenza EVA {rank},,,,,,,,,,
-WayfarersWings/Ribbons/EvaTime,Text,,Spent more than {time} {unit} continously performing an Extra-Vehicular Activity,Trascorso più di {time} {unit} continuamente eseguendo un'Attività Extraveicolare,,,,,,,,,,
-WayfarersWings/Ribbons/EvaTotalTimeName,Text,,EVA Total Time {rank},Tempo Totale EVA {rank},,,,,,,,,,
-WayfarersWings/Ribbons/EvaTotalTime,Text,,Spent more than {time} {unit} performing Extra-Vehicular Activities during all missions,Trascorso più di {time} {unit} eseguendo Attività Extraveicolari durante tutte le missioni,,,,,,,,,,
-,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,
+WayfarersWings/UI/Achievements,Text,Main window title,Achievements,Trofei,,,Logros,,,,,,,
+WayfarersWings/UI/MissionAchievements,Text,Window title for wings gained in current mission (Flight report),Mission Achievements,Trofei della Missione,,,Logros de la Misión,,,,,,,
+WayfarersWings/UI/Ribbons,Text,,Wings,Decorazioni,,,Condecoración,,,,,,,
+WayfarersWings/UI/Kerbals,Text,,Kerbals,Kerbal,,,Kerbals,,,,,,,
+WayfarersWings/UI/TotalMissionTime,Text,,Total mission time,Tempo totale in missione,,,Tiempo total de la misión,,,,,,,
+WayfarersWings/UI/TotalEvaTime,Text,,Total EVA time,Tempo totale in EVA,,,Tiempo total en EVA,,,,,,,
+WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,Missioni completate,,,Misión completa,,,,,,,
+WayfarersWings/UI/Status,Text,,Status,Stato,,,Estado,,,,,,,
+WayfarersWings/UI/OnMission,Text,,On Mission,In Missione,,,En Misión,,,,,,,
+WayfarersWings/UI/Available,Text,,Available,Disponibile,,,Disponible,,,,,,,
+WayfarersWings/UI/Dead,Text,,Dead,Morto,,,Muerto,,,,,,,
+WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,Conferisci Decorazione,,,Premio de condecoración,,,,,,,
+WayfarersWings/UI/AwardToKerbal,Text,,Award,Conferisci,,,Premio,,,,,,,
+WayfarersWings/UI/Search,Text,,Search wing,Cerca decorazione,,,Buscar condecoración,,,,,,,
+WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,Conferma la revoca della decorazione,,,Confirmar la eliminacion de la condecoración,,,,,,,
+WayfarersWings/UI/SortByName,Text,,Sort by name,Ordina per nome,,,Ordenar por nombre,,,,,,,
+WayfarersWings/UI/SortByPoints,Text,,Sort by prestige,Ordina per prestigio,,,Ordenar por prestigio,,,,,,,
+WayfarersWings/UI/KerbalMissionsCount,Text,,{0} missions,{0} missioni,,,{0} misiones,,,,,,,
+WayfarersWings/Ribbons/FirstKerbal,Text,,First Kerbal:,Primo Kerbal:,,,Primer Kerbal:,,,,,,,
+WayfarersWings/Ribbons/FirstTimeName,Text,name is the base ribbon name,{name} 1°,{name} 1°,,,{name} 1°,,,,,,,
+WayfarersWings/Ribbons/FirstTime,Text,description is the base ribbon description,{description} for the first time,{description} per la prima volta,,,{description} por la primera vez,,,,,,,
+WayfarersWings/Ribbons/SphereOfInfluenceName,Text,,{body} Sphere of Influence,Sfera di Influenza di {body},,,Esfera de influencia de {body} ,,,,,,,
+WayfarersWings/Ribbons/SphereOfInfluence,Text,,Entered the Sphere of Influence of {body},Entrato nella Sfera di Influenza di {body},,,Entrar en la Esfera de Influencia de {body},,,,,,,
+WayfarersWings/Ribbons/OrbitName,Text,,{body} Stable Orbit,Orbita Stabile di {body},,,Orbita estable de {body},,,,,,,
+WayfarersWings/Ribbons/Orbit,Text,,Entered into a stable orbit around {body},Entrato in un'orbita stabile attorno a {body},,,Entrar en una órbita estable alrededor de {body},,,,,,,
+WayfarersWings/Ribbons/EVAOrbitName,Text,,{body} EVA in Orbit,EVA in Orbita attorno a {body},,,EVA en Órbita alrededor de {{body}},,,,,,,
+WayfarersWings/Ribbons/EVAOrbit,Text,,Executed EVA in orbit around {body},Eseguito EVA in orbita attorno a {body},,,Ejecutó EVA en órbita alrededor de {body},,,,,,,
+WayfarersWings/Ribbons/EVASpaceName,Text,,{body} EVA in Space,EVA nello Spazio attorno a {body},,,EVA en el Espacio alrededor de {body},,,,,,,
+WayfarersWings/Ribbons/EVASpace,Text,,Executed EVA in space around {body},Eseguito EVA nello spazio attorno a {body},,,Ejecutó EVA en el espacio alrededor de{body},,,,,,,
+WayfarersWings/Ribbons/LandedName,Text,,{body} Landing,Atterraggio su {body},,,Aterrizar en {body},,,,,,,
+WayfarersWings/Ribbons/Landed,Text,,Landed on {body},Atterrato su {body},,,Aterrizado en {body},,,,,,,
+WayfarersWings/Ribbons/EVAGroundName,Text,,{body} EVA on Ground,EVA a Terra su {body},,,EVA en suelo de {body},,,,,,,
+WayfarersWings/Ribbons/EVAGround,Text,,Executed EVA on ground after landing on {body},Eseguito EVA a terra dopo l'atterraggio su {body},,,Ejecutó EVA después de aterrizar en {body},,,,,,,
+WayfarersWings/Ribbons/GeeForceName,Text,,High Gee Force {rank},Alta Forza Gee {rank},,,Alta Fuerza Gee {rank},,,,,,,
+WayfarersWings/Ribbons/GeeForce,Text,,Withstood an acceleration of {geeForce}G,Resistito ad un'accelerazione di {geeForce}G,,,Resistió una aceleración de {geeForce}G,,,,,,,
+WayfarersWings/Ribbons/FlagPlantedName,Text,,{body} Flag,Bandiera di {body},,,Bandera en {body},,,,,,,
+WayfarersWings/Ribbons/FlagPlanted,Text,,Planted a flag on {body} ground during EVA,Piantato una bandiera sul suolo di {body} durante l'EVA,,,Plantó bandera en el suelo de {body} durante EVA,,,,,,,
+WayfarersWings/Ribbons/SingleMissionTimeName,Text,,Endurance {rank},Resistenza {rank},,,Resistencia {rank},,,,,,,
+WayfarersWings/Ribbons/SingleMissionTime,Text,,Returned safely after {time} {unit} in a single mission,Ritornato sano e salvo dopo {time} {unit} in una singola missione,,,Retornó sano y salvo despues de {time} {unit} en una sola misión,,,,,,,
+WayfarersWings/Ribbons/MissionsCompletedName,Text,,Multiple Missions {rank},Missioni Multiple {rank},,,Múltiples Misiones,,,,,,,
+WayfarersWings/Ribbons/MissionsCompleted,Text,,Completed {missions} missions or more,Completate {missions} missioni o più,,,Completó {mission} misiones o más,,,,,,,
+WayfarersWings/Ribbons/TotalMissionsTimeName,Text,,Mission Time {rank},Tempo di Missione {rank},,,Tiempo de Misión {rank},,,,,,,
+WayfarersWings/Ribbons/TotalMissionsTime,Text,,Spent {time} {unit} or more during all missions,Trascorso {time} {unit} o più durante tutte le missioni,,,Pasó {time} {unit} o mas durante todas las misiones,,,,,,,
+WayfarersWings/Ribbons/AtmosphereName,Text,,{body} Atmosphere,Atmosfera di {body},,,Atmósfera de {body},,,,,,,
+WayfarersWings/Ribbons/Atmosphere,Text,,Entered the atmosphere of {body},Entrato nell'atmosfera di {body},,,Entró a la atmósfera de {body},,,,,,,
+WayfarersWings/Ribbons/SplashdownName,Text,,Splashdown,Splashdown,,,Amerizaje,,,,,,,
+WayfarersWings/Ribbons/Splashdown,Text,,Withstood the splashdown of a vessel in ocean,Resistito allo splashdown di un veicolo nell'oceano,,,Resistió el amerizaje del vehiculo en el óceano,,,,,,,
+WayfarersWings/Ribbons/FastOrbitName,Text,,Fast Orbit {rank},Orbita Veloce {rank},,,Órbita Rápida,,,,,,,
+WayfarersWings/Ribbons/FastOrbit,Text,,Reached home world stable orbit in less than {seconds} seconds,Raggiunta orbita stabile del pianeta natale in meno di {seconds} secondi,,,Alcanzó una órbita estable en el planeta natal en menos de {seconds} segundos,,,,,,,
+WayfarersWings/Ribbons/KerbalInSpaceFirstName,Text,,First Kerbal in Space,Primo Kerbal nello Spazio,,,Primer Kerbal en el Espacio,,,,,,,
+WayfarersWings/Ribbons/KerbalInSpaceFirst,Text,,Awarded for being the first kerbal to reach Space,Premiato per essere stato il primo kerbal a raggiungere lo Spazio,,,Premiado por ser el primer Kerbal en alcanzar el espacio,,,,,,,
+WayfarersWings/Ribbons/KerbalEVAInSpaceFirstName,Text,,First EVA in Space,Prima EVA nello Spazio,,,Primer EVA en el Espacio,,,,,,,
+WayfarersWings/Ribbons/KerbalEVAInSpaceFirst,Text,,First EVA conducted in Space by Kerbalkind,Prima EVA condotta nello Spazio della Kerbalkind,,,Primer EVA hecho en Espacio de la Kerbalkind,,,,,,,
+WayfarersWings/Ribbons/SolidFuelBoosterName,Text,,Solid Fuel Booster {rank},Propulsore a Combustibile Solido {rank},,,Propulsor de Combustible Solido {rank},,,,,,,
+WayfarersWings/Ribbons/SolidFuelBooster,Text,,Launched from home world with at least {percentage}% of mass in solid boosters,Lanciato dal pianeta natale con almeno {percentage}% di massa in propulsori a combustibile solido,,,Lanzado desde el planeta natal con al menos {percentage}% de masa en los propulsores solidos,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleName,Text,,Heavy Vehicle {rank},Veicolo Pesante {rank},,,Vehículo Pesado {rank},,,,,,,
+WayfarersWings/Ribbons/HeavyVehicle,Text,,Served as a crew member of a vehicle with a total mass exceeding {mass} tons,Servito come membro dell'equipaggio di un veicolo con una massa totale superiore a {mass} tonnellate,,,Sirvió como miembro de la tripulación de un vehículo con una masa total mayor a {mass} toneladas,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLaunchName,Text,,Heavy Vehicle Launch {rank},Lancio di Veicolo Pesante {rank},,,Lanzamiento de Vehículos Pesados {rank},,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLaunch,Text,,Launched on a vehicle with a total mass exceeding {mass} tons,Lanciato su un veicolo con una massa totale superiore a {mass} tonnellate,,,Lanzadó en un vehículo con una masa mayor a {mass} toneladas,,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLandingName,Text,,Heavy Vehicle Landing {rank},Atterraggio di Veicolo Pesante {rank},,,Aterrizaje de Vehículos Pesados {rank},,,,,,,
+WayfarersWings/Ribbons/HeavyVehicleLanding,Text,,Landed on a vehicle with a total mass exceeding {mass} tons,Atterrato su un veicolo con una massa totale superiore a {mass} tonnellate,,,Aterrizó en un vehículo con una masa total mayor a {mass} toneladas,,,,,,,
+WayfarersWings/Ribbons/MountainLandingName,Text,,Mountain Landing {rank},Atterraggio in Montagna {rank},,,Aterrrizaje en Montaña {rank},,,,,,,
+WayfarersWings/Ribbons/MountainLanding,Text,,Landed on a mountain higher than {altitude} meters,Atterrato su una montagna più alta di {altitude} metri,,,Aterrizó en una montaña con una altura mayor a {altitude} metros,,,,,,,
+WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},Resistenza EVA {rank},,,Resistencia en EVA {rank},,,,,,,
+WayfarersWings/Ribbons/EvaTime,Text,,Spent more than {time} {unit} continously performing an Extra-Vehicular Activity,Trascorso più di {time} {unit} continuamente eseguendo un'Attività Extraveicolare,,,Pasó mas de {time} {unit} realizando continuamente una Actividad Extravehícular,,,,,,,
+WayfarersWings/Ribbons/EvaTotalTimeName,Text,,EVA Total Time {rank},Tempo Totale EVA {rank},,,Tiempo Total en EVA {rank},,,,,,,
+WayfarersWings/Ribbons/EvaTotalTime,Text,,Spent more than {time} {unit} performing Extra-Vehicular Activities during all missions,Trascorso più di {time} {unit} eseguendo Attività Extraveicolari durante tutte le missioni,,,Pasó más de {time} {unit} realizando Actividades Extravehiculares durante todas las misiones.,,,,,,,
