Update spanish localization

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -66,9 +66,9 @@ WayfarersWings/Ribbons/EvaTimeName,Text,,EVA Endurance {rank},Resistenza EVA {ra
 WayfarersWings/Ribbons/EvaTime,Text,,Spent more than {time} {unit} continously performing an Extra-Vehicular Activity,Trascorso più di {time} {unit} continuamente eseguendo un'Attività Extraveicolare,,,Pasó mas de {time} {unit} realizando continuamente una Actividad Extravehícular,,,,,不间断执行EVA超过{time}{unit},,
 WayfarersWings/Ribbons/EvaTotalTimeName,Text,,EVA Total Time {rank},Tempo Totale EVA {rank},,,Tiempo Total en EVA {rank},,,,,EVA总时长{rank},,
 WayfarersWings/Ribbons/EvaTotalTime,Text,,Spent more than {time} {unit} performing Extra-Vehicular Activities during all missions,Trascorso più di {time} {unit} eseguendo Attività Extraveicolari durante tutte le missioni,,,Pasó más de {time} {unit} realizando Actividades Extravehiculares durante todas las misiones.,,,,,在所有任务中累计执行EVA超过{time}{unit},,
-WayfarersWings/Ribbons/DockedName,Text,,{body} Docking,Attracco su {body},,,,,,,,{body}对接,,
-WayfarersWings/Ribbons/Docked,Text,,Docked two vessels while orbiting {body},Attraccato a un altro veicolo nell'orbita di {body},,,,,,,,在环绕{body}的轨道成功对接两艘航天器,,
-WayfarersWings/Ribbons/RoverName,Text,,{body} Rover,Rover su {body},,,,,,,,{body}漫游车,,
-WayfarersWings/Ribbons/Rover,Text,,Drove at least {distance} meters in a wheeled rover on the surface of {body},Guidato almeno {distance} metri su un rover con ruote sulla superfice di {body},,,,,,,,在{body}地表驾驶轮式漫游车行驶至少{distance}米,,
-WayfarersWings/Ribbons/DeepAtmosphereName,Text,,{body} Deep Atmosphere,Atmosfera Profonda di {body},,,,,,,,{body}深层大气,,
-WayfarersWings/Ribbons/DeepAtmosphere,Text,,Entered the deeper atmosphere of {body},Entrato nell'atmosfera profonda di {body},,,,,,,,进入{body}的深层大气,,
+WayfarersWings/Ribbons/DockedName,Text,,{body} Docking,Attracco su {body},,,{body} Acoplamiento,,,,,{body}对接,,
+WayfarersWings/Ribbons/Docked,Text,,Docked two vessels while orbiting {body},Attraccato a un altro veicolo nell'orbita di {body},,,Acompló dos vehiculos mientras órbitaba {body},,,,,在环绕{body}的轨道成功对接两艘航天器,,
+WayfarersWings/Ribbons/RoverName,Text,,{body} Rover,Rover su {body},,,{body} Vehículo explorador,,,,,{body}漫游车,,
+WayfarersWings/Ribbons/Rover,Text,,Drove at least {distance} meters in a wheeled rover on the surface of {body},Guidato almeno {distance} metri su un rover con ruote sulla superfice di {body},,,Manejó al menos {distance} metros en un vehículo explorador con ruedas en la superficie de {body},,,,,在{body}地表驾驶轮式漫游车行驶至少{distance}米,,
+WayfarersWings/Ribbons/DeepAtmosphereName,Text,,{body} Deep Atmosphere,Atmosfera Profonda di {body},,,{body} Atmósfera Profunda,,,,,{body}深层大气,,
+WayfarersWings/Ribbons/DeepAtmosphere,Text,,Entered the deeper atmosphere of {body},Entrato nell'atmosfera profonda di {body},,,Entró a la atmósfera profunda de {body),,,,,进入{body}的深层大气,,
