Add Kerbals filtering

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -9,8 +9,11 @@ WayfarersWings/UI/MissionsCompleted,Text,,Missions completed,Missioni completate
 WayfarersWings/UI/Status,Text,,Status,Stato,Status,,Estado,,,,,状态,,
 WayfarersWings/UI/OnMission,Text,,On Mission,In Missione,auf Mission,,En Misión,,,,,正在执行任务,,
 WayfarersWings/UI/Available,Text,,Available,Disponibile,verfügbar,,Disponible,,,,,待命,,
+WayfarersWings/UI/ActiveVessel,Text,,Active Vessel,Veicolo Attivo,,,,,,,,,,
+WayfarersWings/UI/All,Text,used in filter dropdown,All,Tutti,,,,,,,,,,
+WayfarersWings/UI/Starred,Text,a starred kerbal,Starred,Favorito,,,,,,,,,,
 WayfarersWings/UI/Dead,Text,,Dead,Morto,tot,,Muerto,,,,,牺牲,,
-WayfarersWings/UI/AwardWingTitle,Text,,Award Wing,Conferisci Decorazione,Abzeichen zuweisen,,Premio de condecoración,,,,,授予勋章,,
+WayfarersWings/UI/AwardWingTitle,Text,unused,Award wing,Conferisci decorazione,Abzeichen zuweisen,,Premio de condecoración,,,,,授予勋章,,
 WayfarersWings/UI/AwardToKerbal,Text,,Award,Conferisci,Belohnung,,Premio,,,,,授予,,
 WayfarersWings/UI/Search,Text,,Search wing,Cerca decorazione,Auszeichung suchen,,Buscar condecoración,,,,,检索勋章,,
 WayfarersWings/UI/ConfirmRevokeButton,Text,,Confirm to revoke wing,Conferma la revoca della decorazione,Bestätigen um Auszeichnung zu wiederrufen,,Confirmar la eliminacion de la condecoración,,,,,确认剥夺勋章,,
