Show statistics in the kerbal panel

--- a/plugin_template/localizations/wayfarers_wings_localization.csv
+++ b/plugin_template/localizations/wayfarers_wings_localization.csv
@@ -20,6 +20,13 @@ WayfarersWings/UI/ConfirmRevokeButton,Text,,"it's a ""click to confirm ribbon re
 WayfarersWings/UI/SortByName,Text,,,Sort by name,Ordina per nome,nach Namen sortieren,Trier par nom,Ordenar por nombre,,,,,按名称排序,,
 WayfarersWings/UI/SortByPoints,Text,,,Sort by prestige,Ordina per prestigio,nach Ruf sortieren,Trier par prestige,Ordenar por prestigio,,,,,按声望排序,,
 WayfarersWings/UI/KerbalMissionsCount,Text,,,{0} missions,{0} missioni,{0} Missionen,{0} missions,{0} misiones,,,,,{0}项任务,,
+WayfarersWings/UI/VisitedDiscoverablesCount,Text,,number of discoverables found,Visited discoverables,Luoghi scopribili visitati,,,,,,,,,,
+WayfarersWings/UI/VisitedBiomesCount,Text,,number of biomes (science regions) visited,Visited biomes,Biomi visitati,,,,,,,,,,
+WayfarersWings/UI/VisitedBodiesCount,Text,,number of celestial bodies reached,Visited celestial bodies,Corpi celesti visitati,,,,,,,,,,
+WayfarersWings/UI/Statistics,Text,,"tab ""Statistics"" vs tab ""Wings"" in the kerbal profile",Statistics,Statistiche,,,,,,,,,,
+WayfarersWings/UI/CelestialBodies,Text,,,Celestial bodies,Corpi celesti,,,,,,,,,,
+WayfarersWings/UI/ActiveMission,Text,,,Active Mission,Missione attiva,,,,,,,,,,
+WayfarersWings/UI/VisitedRegionsCount,Text,,number of biomes + discoverables,Visited regions,Regioni visitate,,,,,,,,,,
 WayfarersWings/Ribbons/FirstKerbal,Text,,,First Kerbal:,Primo Kerbal:,erster Kerbal:,Premier Kerbal :,Primer Kerbal:,,,,,先驱者：,,
 WayfarersWings/Ribbons/FirstTimeName,Text,,name is the base ribbon name,{name} 1°,{name} 1°,{name} 1°,{name} 1°,{name} 1°,,,,,{name}第一人,,
 WayfarersWings/Ribbons/FirstTime,Text,,description is the base ribbon description,{description} for the first time,{description} per la prima volta,{description} zum ersten Mail,{description} pour la première fois,{description} por la primera vez,,,,,第一次{description},,
